tests/ui/parser/shebang/shebang-split.rs
// empty line
# !/bin/env
//~^ ERROR expected `[`, found `/`
// checks that diagnostics for shebang lookalikes is not present
